--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
   },
   "dependencies": {
     "@emotion/react": "^11.11.0",
@@ -20,10 +20,12 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-syntax-highlighter": "^15.5.0",
     "typescript": "^4.9.5"
   },
   "devDependencies": {
     "@types/node": "18.15.0",
+    "@types/react-syntax-highlighter": "^15.5.7",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.2",
     "prettier": "2.7.1"
